# Spider

./: CMakeLists.txt  config.ini  main.cpp
Clientdb/: Clientdb.cpp  Clientdb.h
HtmlClient/: HtmlClient.cpp  HtmlClient.h
SecondFunk/: SecondaryFunction.cpp  SecondaryFunction.h
ThreadPool/: Safe_queue.hpp  Thread_pool.cpp  Thread_pool.h
wordSearch/: wordSearch.cpp  wordSearch.h
